Sat Feb 22 20:24:43 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xpath*.rb: Move to ...
	* test/rexml/xpath/*.rb: ... here.

Sat Feb 22 20:04:41 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/listener.rb: Untabify.

Sat Feb 22 19:07:31 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/io/console/console.c (console_dev): need read access for conout$
	  because some functions need it.  [Bug#9554]

Sat Feb 22 18:40:58 2014  Eric Wong  <e@80x24.org>

	* .gitignore: ignore benchmark files

Sat Feb 22 01:22:24 2014  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c (bary_mul_precheck): fix a copy-paste error.
	  Coverity Scan found this bug.

Sat Feb 22 00:58:51 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/socket/raddrinfo.c (rb_getaddrinfo): second argument of
	  MEMZERO is type.  Coverity Scan found this bug.

Fri Feb 21 23:47:24 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/socket/init.c (wait_connectable): break if the socket is
	  writable to avoid infinite loops on FreeBSD and other platforms
	  which conforms to SUSv3.  This problem cannot be reproduced with
	  loopback interfaces, so it's hard to write test code.
	  rsock_connect() and wait_connectable() are overly complicated, so
	  they should be refactored, but I commit this fix as a workaround
	  for the release of Ruby 1.9.3 scheduled on Feb 24.
	  [ruby-core:60940] [Bug #9547]

Fri Feb 21 23:03:39 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb: added to handle redmine tickets.

Fri Feb 21 20:42:01 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_mod_init_copy): do nothing if copying self.
	  [ruby-dev:47989] [Bug #9535]

	* hash.c (rb_hash_initialize_copy): ditto.

Fri Feb 21 16:45:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (next_rotate_time, previous_period_end): consider
	  DST change.

	* lib/logger.rb (Logger::LogDevice#check_shift_log): compare the
	  current time with the time for the next rotation to fix rotation